--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,21 +11,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-06-11 Tue 12:20]
+#+CAPTION: Clock summary at [2019-06-11 Tue 22:52]
 | <75>                                               |         |       |      |       |
 | Headline                                           | Time    |       |      |     % |
 |----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                       | *16:38* |       |      | 100.0 |
+| *Total time*                                       | *17:59* |       |      | 100.0 |
 |----------------------------------------------------+---------+-------+------+-------|
-| Stories                                            | 16:38   |       |      | 100.0 |
-| Active                                             |         | 16:38 |      | 100.0 |
-| Edit release notes for previous sprint             |         |       | 3:36 |  21.6 |
-| Create a demo and presentation for previous sprint |         |       | 1:39 |   9.9 |
-| Sprint and product backlog grooming                |         |       | 2:30 |  15.0 |
-| Remove test model sanitizer                        |         |       | 0:20 |   2.0 |
-| Remove master headers                              |         |       | 1:12 |   7.2 |
-| Move registrar into assets                         |         |       | 1:44 |  10.4 |
-| Org-mode as a carrier format for modeling          |         |       | 5:37 |  33.8 |
+| Stories                                            | 17:59   |       |      | 100.0 |
+| Active                                             |         | 17:59 |      | 100.0 |
+| Edit release notes for previous sprint             |         |       | 3:36 |  20.0 |
+| Create a demo and presentation for previous sprint |         |       | 1:39 |   9.2 |
+| Sprint and product backlog grooming                |         |       | 2:30 |  13.9 |
+| Remove test model sanitizer                        |         |       | 0:20 |   1.9 |
+| Remove master headers                              |         |       | 1:12 |   6.7 |
+| Move registrar into assets                         |         |       | 3:05 |  17.1 |
+| Org-mode as a carrier format for modeling          |         |       | 5:37 |  31.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -355,6 +355,7 @@ initialisers.
 
 *** STARTED Move registrar into assets                                :story:
     :LOGBOOK:
+    CLOCK: [2019-06-11 Tue 21:31]--[2019-06-11 Tue 22:52] =>  1:21
     CLOCK: [2019-06-11 Tue 11:57]--[2019-06-11 Tue 12:20] =>  0:23
     CLOCK: [2019-06-11 Tue 11:52]--[2019-06-11 Tue 11:56] =>  0:04
     CLOCK: [2019-06-11 Tue 11:16]--[2019-06-11 Tue 11:51] =>  0:35
@@ -381,7 +382,14 @@ Notes:
   capturing of patterns into as many steps as possible, to make sure
   we don't get overwhelmed as we implement things.
 - we need to keep track of all type registrars on referenced models,
-  not on the referenced models themselves.
+  not on the referenced models themselves. We need to know which
+  models we referenced directly, and then find the registrars for
+  those models.
+
+*** Replace =operator<= for sorting with lambdas                      :story:
+
+We have used =operator<= a lot for sorting lists. We don't really need
+this since c++ 11, we can just create a simple inline lambda.
 
 *** STARTED Org-mode as a carrier format for modeling                 :story:
     :LOGBOOK:
