--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -16,6 +16,64 @@ such as profiles, licences etc.
 
 Stories that we haven't quite classified yet, but are needed.
 
+*** Modeling error in tests facet                                     :story:
+
+When we created the tests facet, we did not exactly follow the
+existing framework. Normally we have the concept of a project
+(e.g. say "directory settings"), which contains what is now understood
+as "destinations". In C++ these can be:
+
+- include
+- source (=src= folder)
+
+Destinations are just folders in the filesystem. These can be mapped
+to any name defined by the user. Normally, we then place facets inside
+of destinations. For example, the facet "types" can be projected into
+the include and source destinations:
+
+- =include/types=
+- =src/types=
+
+Some facets do not have a facet folder, and as such are projected
+directly onto the project directory (CMakeLists, etc).
+
+ When we added tests, we created a destination called =tests= but we
+ also created a facet called =tests=. If all had gone according to the
+ existing logic, we would have ended up with:
+
+- =tests/tests=
+
+However, we glossed over all of the above and when setting the file
+paths we used the facet directory, but when setting other things (such
+as say the CMakeLists directories), we used the destination. The net
+result is that, for all intents and purposes, it looked as if we were
+following the above setup, but somehow had ended up with:
+
+- =tests=
+
+When we recently updated the directory settings model, it all came
+undone. As a hack, we did:
+
+: #DOGEN masd.generation.cpp.tests.directory=tests_dir
+: #DOGEN masd.generation.cpp.tests_directory_name=tests_dir
+
+To maintain the existing logic, but in truth we need a proper fix. The
+right solution is to give a name to the facet which is not =tests=. It
+should really be something evocative of its functionality:
+
+- generated tests? but then we don't partition generated code anywhere
+  else. It would be useful though, so that we can easily locate
+  handcrafted tests - and even exclude them too. If we also had
+  separate CMakeFiles we could have a top-level variable that excludes
+  generated tests for compilation.
+- tests for code generated code?
+- structural tests?
+
+Basically we need a fitting name for this facet. Once found, we need
+to move all tests into this directory.
+
+Note that we cannot do the locator clean up until we sort out this mess.
+
 *** Simplify implementation of boost serialisation registrar          :story:
 
 - at present we are using templates on the cpp file, and it is not
@@ -3994,6 +4052,17 @@ useful for languages like C# and Java, to control serialisation, etc.
 Things we should address as soon as possible because they impact dogen
 usage. Urgent things that are going to annoy users.
 
+*** Cannot create classes with pointers to base                       :story:
+
+At present it is not possible to create a class (call it A) with a
+shared pointer to a base class (B). This is because A defines the
+equality operator, but B does not. We need to have some kind of "has
+equality" but in a more generalised form so that we can reuse it for
+other things like comparisons, etc.
+
+Then, we suppress the generation of the equality operator in the
+presence of any members which do not have support for it.
+
 *** Detect unqualified stereotypes                                    :story:
 
 If a user enters say =enumeration= instead of =yarn::enumeration= we
@@ -5046,6 +5115,9 @@ ideas into stories and add them as we go along.
 
 *Intermediate model checks*:
 
+- ensure all models part of a model set have compatible versions. For
+  example, referencing a C++ 98 model from a C++ 11 model (or
+  vice-versa) should result in an error.
 - detect cycles in references
 - detect references to self
 - if a model is making use of boost serialisation and it has leaves, a
