--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,22 +11,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-06-19 Wed 16:48]
+#+CAPTION: Clock summary at [2019-07-14 Sun 14:27]
 | <75>                                               |         |       |      |       |
 | Headline                                           | Time    |       |      |     % |
 |----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                       | *23:53* |       |      | 100.0 |
+| *Total time*                                       | *24:17* |       |      | 100.0 |
 |----------------------------------------------------+---------+-------+------+-------|
-| Stories                                            | 23:53   |       |      | 100.0 |
-| Active                                             |         | 23:53 |      | 100.0 |
-| Edit release notes for previous sprint             |         |       | 3:36 |  15.1 |
-| Create a demo and presentation for previous sprint |         |       | 1:39 |   6.9 |
-| Sprint and product backlog grooming                |         |       | 2:30 |  10.5 |
+| Stories                                            | 24:17   |       |      | 100.0 |
+| Active                                             |         | 24:17 |      | 100.0 |
+| Edit release notes for previous sprint             |         |       | 3:36 |  14.8 |
+| Create a demo and presentation for previous sprint |         |       | 1:39 |   6.8 |
+| Sprint and product backlog grooming                |         |       | 2:30 |  10.3 |
 | Remove test model sanitizer                        |         |       | 0:20 |   1.4 |
-| Remove master headers                              |         |       | 1:12 |   5.0 |
-| Fix the issues with tests in reference model       |         |       | 3:53 |  16.3 |
-| Move registrar into assets                         |         |       | 5:06 |  21.4 |
-| Org-mode as a carrier format for modeling          |         |       | 5:37 |  23.5 |
+| Remove master headers                              |         |       | 1:12 |   4.9 |
+| Fix the issues with tests in reference model       |         |       | 3:53 |  16.0 |
+| Move registrar into assets                         |         |       | 5:06 |  21.0 |
+| Fix compilation errors in nightly                  |         |       | 0:24 |   1.6 |
+| Org-mode as a carrier format for modeling          |         |       | 5:37 |  23.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -408,6 +409,31 @@ Notes:
 - leaves need to know of the registrar. This is so that we can call it
   in their generated tests. We could use the registrar transform to go
   and find all leaves and populate their registrar name.
+
+*** STARTED Fix compilation errors in nightly                         :story:
+    :LOGBOOK:
+    CLOCK: [2019-07-14 Sun 14:03]--[2019-07-14 Sun 14:27] =>  0:24
+    :END:
+
+Ever since we moved to the new PC, we are now getting weird
+compilation errors:
+
+: ../../../../projects/cpp_ref_impl.cpp_98/tests/an_enumeration_tests.cpp:100:58: error: the result of the conversion is unspecified because ‘13’ is outside the range of type ‘cpp_ref_impl::cpp_98::an_enumeration’ [-Werror=conversion]
+
+The problem appears to be that our push for the warning is no longer working:
+
+: BOOST_AUTO_TEST_CASE(casting_invalid_enumeration_throws) {
+: #if BOOST_COMP_GNUC
+: #pragma GCC diagnostic push
+: #pragma GCC diagnostic ignored "-Wconversion"
+: #endif
+:    using cpp_ref_impl::cpp_98::an_enumeration;
+:   const an_enumeration r(static_cast<an_enumeration>(13));
+: #if BOOST_COMP_GNUC
+: #pragma GCC diagnostic pop
+: #endif
+
+This may be related to our use of boost macros without including =predef.h=.
 
 *** Replace =operator<= for sorting with lambdas                      :story:
 
