--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,22 +11,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-07-14 Sun 14:27]
+#+CAPTION: Clock summary at [2019-07-14 Sun 14:33]
 | <75>                                               |         |       |      |       |
 | Headline                                           | Time    |       |      |     % |
 |----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                       | *24:17* |       |      | 100.0 |
+| *Total time*                                       | *24:22* |       |      | 100.0 |
 |----------------------------------------------------+---------+-------+------+-------|
-| Stories                                            | 24:17   |       |      | 100.0 |
-| Active                                             |         | 24:17 |      | 100.0 |
+| Stories                                            | 24:22   |       |      | 100.0 |
+| Active                                             |         | 24:22 |      | 100.0 |
 | Edit release notes for previous sprint             |         |       | 3:36 |  14.8 |
 | Create a demo and presentation for previous sprint |         |       | 1:39 |   6.8 |
 | Sprint and product backlog grooming                |         |       | 2:30 |  10.3 |
 | Remove test model sanitizer                        |         |       | 0:20 |   1.4 |
 | Remove master headers                              |         |       | 1:12 |   4.9 |
-| Fix the issues with tests in reference model       |         |       | 3:53 |  16.0 |
-| Move registrar into assets                         |         |       | 5:06 |  21.0 |
+| Fix the issues with tests in reference model       |         |       | 3:53 |  15.9 |
+| Move registrar into assets                         |         |       | 5:06 |  20.9 |
 | Fix compilation errors in nightly                  |         |       | 0:24 |   1.6 |
+| Upgrade to boost 1.70                              |         |       | 0:05 |   0.3 |
 | Org-mode as a carrier format for modeling          |         |       | 5:37 |  23.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -434,6 +435,13 @@ The problem appears to be that our push for the warning is no longer working:
 : #endif
 
 This may be related to our use of boost macros without including =predef.h=.
+
+*** STARTED Upgrade to boost 1.70                                     :story:
+    :LOGBOOK:
+    CLOCK: [2019-07-14 Sun 14:28]--[2019-07-14 Sun 14:33] =>  0:05
+    :END:
+
+We should try to upgrade to latest boost.
 
 *** Replace =operator<= for sorting with lambdas                      :story:
 
