--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,24 +11,24 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-07-14 Sun 14:33]
+#+CAPTION: Clock summary at [2019-07-14 Sun 16:33]
 | <75>                                               |         |       |      |       |
 | Headline                                           | Time    |       |      |     % |
 |----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                       | *24:22* |       |      | 100.0 |
+| *Total time*                                       | *26:21* |       |      | 100.0 |
 |----------------------------------------------------+---------+-------+------+-------|
-| Stories                                            | 24:22   |       |      | 100.0 |
-| Active                                             |         | 24:22 |      | 100.0 |
-| Edit release notes for previous sprint             |         |       | 3:36 |  14.8 |
-| Create a demo and presentation for previous sprint |         |       | 1:39 |   6.8 |
-| Sprint and product backlog grooming                |         |       | 2:30 |  10.3 |
-| Remove test model sanitizer                        |         |       | 0:20 |   1.4 |
-| Remove master headers                              |         |       | 1:12 |   4.9 |
-| Fix the issues with tests in reference model       |         |       | 3:53 |  15.9 |
-| Move registrar into assets                         |         |       | 5:06 |  20.9 |
-| Fix compilation errors in nightly                  |         |       | 0:24 |   1.6 |
-| Upgrade to boost 1.70                              |         |       | 0:05 |   0.3 |
-| Org-mode as a carrier format for modeling          |         |       | 5:37 |  23.1 |
+| Stories                                            | 26:21   |       |      | 100.0 |
+| Active                                             |         | 26:21 |      | 100.0 |
+| Edit release notes for previous sprint             |         |       | 3:36 |  13.7 |
+| Create a demo and presentation for previous sprint |         |       | 1:39 |   6.3 |
+| Sprint and product backlog grooming                |         |       | 2:30 |   9.5 |
+| Remove test model sanitizer                        |         |       | 0:20 |   1.3 |
+| Remove master headers                              |         |       | 1:12 |   4.6 |
+| Fix the issues with tests in reference model       |         |       | 3:53 |  14.7 |
+| Move registrar into assets                         |         |       | 5:06 |  19.4 |
+| Fix compilation errors in nightly                  |         |       | 0:24 |   1.5 |
+| Upgrade to boost 1.70                              |         |       | 2:04 |   7.8 |
+| Org-mode as a carrier format for modeling          |         |       | 5:37 |  21.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -438,10 +438,40 @@ This may be related to our use of boost macros without including =predef.h=.
 
 *** STARTED Upgrade to boost 1.70                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-07-14 Sun 14:34]--[2019-07-14 Sun 16:33] =>  1:59
     CLOCK: [2019-07-14 Sun 14:28]--[2019-07-14 Sun 14:33] =>  0:05
     :END:
 
 We should try to upgrade to latest boost.
+
+Notes:
+
+- the problem appears to be that with OSX we do not have a compiler
+  installed that can compile vcpkg. It is not clear how we did it
+  before. The installed XCode compiler is too old and we do not have
+  homebrew for gcc.
+- installed LLVM 7. Ninja then went on a strange loop, regenerating
+  CMake files. This was because NTP had not been working on OSX for
+  some reason, and the clock was in the past.
+- compiling with clang 7 causes the =-lc++fs= linking error. Tried
+  compiling with clang 8.
+- Compilation required setting LDFLAGS -L to point to the lib
+  directory of the download, else the static library for filesystem
+  could not be location.
+- We may have linking problems now that we are using XCode 10 in
+  travis and clang 8 to build vcpkg dependencies.
+- ODB 2.5 no longer works due to a git ref mismatch. Not clear why
+  that would be but the object we were referencing no longer exists in
+  code synthesis git repo.
+- the ref for ODB SQL lite 2.5.0-b.9 does not seem to exist in their
+  repo any longer. Due to this, the OSX build is failing. For now we
+  shall try to update excluding that dependency, given we are not even
+  using it.
+- boost regex fails to build. The problem is that we are picking up
+  the system compiler instead of CXX. It is not clear why that
+  is. Maybe we got lucky in the past because we were using c++14 but
+  now with c++17 system clang fails to compile because it does not
+  have c++ 17 support.
 
 *** Replace =operator<= for sorting with lambdas                      :story:
 
