--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -374,6 +374,35 @@ Notes:
   (e.g. assignment, etc).
 - issues with the new tests facet directory and destination.
 
+*** CANCELLED Update static strings to string views                   :story:
+    CLOSED: [2019-09-05 Thu 11:05]
+     :LOGBOOK:
+     CLOCK: [2019-09-05 Thu 10:50]--[2019-09-05 Thu 11:04] =>  0:14
+     CLOCK: [2019-09-04 Wed 19:20]--[2019-09-04 Wed 19:47] =>  0:27
+     CLOCK: [2019-09-04 Wed 18:45]--[2019-09-04 Wed 19:19] =>  0:34
+     :END:
+
+ Now we're on C++17 we can start making use of its new features. One
+ low hanging fruit is string view. We use static strings quite a lot
+ for logging etc. We can just replace these with string views.
+
+ Example:
+
+ : #include <string_view>
+ : constexpr std::string_view foo("abc");
+
+ Problems:
+
+ - cannot do XML text reader because we do not have a good way to
+   convert string_view to cstr. See [[https://stackoverflow.com/questions/48081436/how-you-convert-a-stdstring-view-to-a-const-char][How you convert a std::string_view
+   to a const char*?]]
+
+ Links:
+
+ - [[https://www.bfilipek.com/2018/10/strings17talk.html][Let's Talk About String Operations in C++17]]
+ - [[https://developercommunity.visualstudio.com/content/problem/24487/constexpr-stdstring-view-from-string-literal.html][constexpr std::string_view from string literal]]
+ - [[https://www.reddit.com/r/cpp/comments/cw35kk/best_practices_for_efficient_string_constants/][Best practices for efficient string constants]]
+
 *** STARTED Move registrar into assets                                :story:
     :LOGBOOK:
     CLOCK: [2019-06-12 Wed 15:08]--[2019-06-12 Wed 17:09] =>  2:01
@@ -438,6 +467,8 @@ This may be related to our use of boost macros without including =predef.h=.
 
 *** STARTED Upgrade to boost 1.70                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-09-10 Tue 08:40]--[2019-09-10 Tue 10:14] =>  1:34
+    CLOCK: [2019-09-05 Thu 11:07]--[2019-09-05 Thu 11:17] =>  0:10
     CLOCK: [2019-07-14 Sun 14:34]--[2019-07-14 Sun 16:33] =>  1:59
     CLOCK: [2019-07-14 Sun 14:28]--[2019-07-14 Sun 14:33] =>  0:05
     :END:
@@ -472,6 +503,7 @@ Notes:
   is. Maybe we got lucky in the past because we were using c++14 but
   now with c++17 system clang fails to compile because it does not
   have c++ 17 support.
+- nightlies are now failing with a missing reference to SQL lite.
 
 *** Replace =operator<= for sorting with lambdas                      :story:
 
@@ -540,27 +572,6 @@ Notes:
   definition of the PDM, the advantage is that we now have the right
   place to put the definition, and is done only once and shared by all
   models.
-
-*** STARTED Update static strings to string views                     :story:
-    :LOGBOOK:
-    CLOCK: [2019-09-04 Wed 19:20]--[2019-09-04 Wed 19:47] =>  0:27
-    CLOCK: [2019-09-04 Wed 18:45]--[2019-09-04 Wed 19:19] =>  0:34
-    :END:
-
-Now we're on C++17 we can start making use of its new features. One
-low hanging fruit is string view. We use static strings quite a lot
-for logging etc. We can just replace these with string views.
-
-Example:
-
-: #include <string_view>
-: constexpr std::string_view foo("abc");
-
-Links:
-
-- [[https://www.bfilipek.com/2018/10/strings17talk.html][Let's Talk About String Operations in C++17]]
-- [[https://developercommunity.visualstudio.com/content/problem/24487/constexpr-stdstring-view-from-string-literal.html][constexpr std::string_view from string literal]]
-- [[https://www.reddit.com/r/cpp/comments/cw35kk/best_practices_for_efficient_string_constants/][Best practices for efficient string constants]]
 
 *** Add string view to dogen exception constructor                    :story:
 
