--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,24 +11,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-07-14 Sun 16:33]
+#+CAPTION: Clock summary at [2019-09-10 Tue 12:39]
 | <75>                                               |         |       |      |       |
 | Headline                                           | Time    |       |      |     % |
 |----------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                       | *26:21* |       |      | 100.0 |
+| *Total time*                                       | *31:44* |       |      | 100.0 |
 |----------------------------------------------------+---------+-------+------+-------|
-| Stories                                            | 26:21   |       |      | 100.0 |
-| Active                                             |         | 26:21 |      | 100.0 |
-| Edit release notes for previous sprint             |         |       | 3:36 |  13.7 |
-| Create a demo and presentation for previous sprint |         |       | 1:39 |   6.3 |
-| Sprint and product backlog grooming                |         |       | 2:30 |   9.5 |
-| Remove test model sanitizer                        |         |       | 0:20 |   1.3 |
-| Remove master headers                              |         |       | 1:12 |   4.6 |
-| Fix the issues with tests in reference model       |         |       | 3:53 |  14.7 |
-| Move registrar into assets                         |         |       | 5:06 |  19.4 |
-| Fix compilation errors in nightly                  |         |       | 0:24 |   1.5 |
-| Upgrade to boost 1.70                              |         |       | 2:04 |   7.8 |
-| Org-mode as a carrier format for modeling          |         |       | 5:37 |  21.3 |
+| Stories                                            | 31:44   |       |      | 100.0 |
+| Active                                             |         | 31:44 |      | 100.0 |
+| Edit release notes for previous sprint             |         |       | 3:36 |  11.3 |
+| Create a demo and presentation for previous sprint |         |       | 1:39 |   5.2 |
+| Sprint and product backlog grooming                |         |       | 2:30 |   7.9 |
+| Remove test model sanitizer                        |         |       | 0:20 |   1.1 |
+| Remove master headers                              |         |       | 1:12 |   3.8 |
+| Fix the issues with tests in reference model       |         |       | 3:53 |  12.2 |
+| Update static strings to string views              |         |       | 1:15 |   3.9 |
+| Move registrar into assets                         |         |       | 5:06 |  16.1 |
+| Fix compilation errors in nightly                  |         |       | 0:24 |   1.3 |
+| Upgrade to boost 1.70                              |         |       | 6:12 |  19.5 |
+| Org-mode as a carrier format for modeling          |         |       | 5:37 |  17.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -467,6 +468,7 @@ This may be related to our use of boost macros without including =predef.h=.
 
 *** STARTED Upgrade to boost 1.70                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-09-10 Tue 10:15]--[2019-09-10 Tue 12:39] =>  2:24
     CLOCK: [2019-09-10 Tue 08:40]--[2019-09-10 Tue 10:14] =>  1:34
     CLOCK: [2019-09-05 Thu 11:07]--[2019-09-05 Thu 11:17] =>  0:10
     CLOCK: [2019-07-14 Sun 14:34]--[2019-07-14 Sun 16:33] =>  1:59
