agile: backlog grooming

--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -468,6 +468,7 @@ This may be related to our use of boost macros without including =predef.h=.
 
 *** STARTED Upgrade to boost 1.70                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-09-10 Tue 13:05]--[2019-09-10 Tue 16:53] =>  3:48
     CLOCK: [2019-09-10 Tue 10:15]--[2019-09-10 Tue 12:39] =>  2:24
     CLOCK: [2019-09-10 Tue 08:40]--[2019-09-10 Tue 10:14] =>  1:34
     CLOCK: [2019-09-05 Thu 11:07]--[2019-09-05 Thu 11:17] =>  0:10
